Initial form design

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,24 @@
   <meta name="theme-color" content="#000000" />
   <meta name="Expanse tracker" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="../src/assets/scss/styles.css" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Expanse tracker</title>
 </head>
 
-<body>
+<body class="bg-body">
+
+  <div id="nav-bar" class="mb-3">
+  </div>
+
+  <div id="form-body" class="container-sm p-3 bg-light">
+  </div>
+
+
+
+
+
+
 
 </body>
 
