Corrected project name

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <div id="nav-bar" class="mb-3">
   </div>
 
-  <div id="form-body" class="container-sm p-3 bg-light">
+  <div id="form-body">
   </div>
 
 
