Finished Initial design

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,15 @@
   <div id="nav-bar" class="mb-3">
   </div>
 
-  <div id="form-body">
-  </div>
-
   <div id="login-page">
   </div>
+
+  <div id="form-body" class="p-3">
+  </div>
+
+  <div id="history" class="p-3">
+  </div>
+
 
 
 
