Intialized React-router, basic implementation for React-router code

--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,17 @@
 
 <body class="bg-body">
 
-  <div id="nav-bar" class="mb-3">
+  <div id="nav-bar">
   </div>
 
   <div id="login-page">
   </div>
 
-  <div id="form-body" class="p-3">
+  <!-- <div id="form-body" class="p-3">
   </div>
 
   <div id="history" class="p-3">
-  </div>
-
+  </div> -->
 
 </body>
 
