--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,18 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="Expanse tracker" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="../src/assets/scss/styles.css" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Expanse tracker</title>
 </head>
 
-<body class="bg-body">
+<body class="body-bg">
 
-  <div id="nav-bar">
+  <div id="main-body">
+
   </div>
-
-  <div id="login-page">
-  </div>
-
-  <!-- <div id="form-body" class="p-3">
-  </div>
-
-  <div id="history" class="p-3">
-  </div> -->
 
 </body>
 
