--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <meta name="Expanse tracker" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Track and manage your expenses effortlessly with this simple and intuitive Expense Tracker app. Built with React, Firebase, and Bootstrap, it allows you to add, view, and delete expenses with ease. Perfect for personal finance management!" />
   <link rel="stylesheet" href="../src/assets/scss/styles.css" />
   <title>Expanse tracker</title>
 </head>
