--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
       name="description"
       content="Track and manage your expenses effortlessly with this simple and intuitive Expense Tracker app. Built with React, Firebase, and Bootstrap, it allows you to add, view, and delete expenses with ease. Perfect for personal finance management!"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../src/assets/scss/styles.css" />
     <title>Expanse tracker</title>
   </head>
