fixed several bugs, updated the styling, added income data to the dashboard, and more

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <title>Expanse tracker</title>
   </head>
 
-  <body class="body-bg">
+  <body>
     <div id="main-body"></div>
   </body>
 </html>
